<resources>
    <string name="app_name" translatable="true">GoraMobile</string>
    <string name="title_activity_login">Gora Log In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_text">Cabinets List</string>
    <string name="nav_header_subtitle_text">User Name and Title</string>

    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_metanim">Enter Valid Metanim</string>
    <string name="prompt_username">Enter Your Username</string>
    <string name="prompt_password">Enter Valid Password</string>
    <!-- <string name="action_sign_in">Sign in or register</string> -->
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_metanim">This metanim is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    
    <string name="drawer_item1_title">Learn Cabinet</string>
    <string name="drawer_item2_title">Principal Cabinet</string>
    <string name="drawer_item3_title">Settings</string>
    <string name="drawer_item4_title">Modules</string>
    <string name="drawer_item5_title">Technical Support/Feedback</string>
    <string name="drawer_item6_title">User Management</string>
    <string name="drawer_section_title">Communication</string>
</resources>
